Migration to IDFv5.0 - Changes to CMakeLists.txt as per the migration guide. - Disabled RSA for now , need to look into the build issues. - Removed .mk and Makefile as its no longer needed IDF 5.0 onwards
NOTE: Tested the provision_test_certificate working with esp32-c3 with RSA disabled.

--- a/components/optiga/CMakeLists.txt
+++ b/components/optiga/CMakeLists.txt
@@ -1,5 +1,9 @@
 set(COMPONENT_ADD_INCLUDEDIRS 
 		"${PROJECT_SOURCE_DIR}/components/mbedtls/mbedtls/include"
+		"${PROJECT_SOURCE_DIR}/components/driver/include"
+		"${PROJECT_SOURCE_DIR}/components/esp_netif/include"
+		"${PROJECT_SOURCE_DIR}/components/esp_event/include"
+		"${PROJECT_SOURCE_DIR}/components/esp_wifi/include"
 		"${CMAKE_CURRENT_LIST_DIR}/optiga-trust-m/optiga/include"
 		"${CMAKE_CURRENT_LIST_DIR}/optiga-trust-m/examples/mbedtls_port/include"
 		)
@@ -34,7 +38,6 @@ set(COMPONENT_SRCS
 	"${CMAKE_CURRENT_LIST_DIR}/optiga-trust-m/optiga/util/optiga_util.c")
 
 set(COMPONENT_REQUIRES mbedtls)
-
 register_component()
 
 target_sources(mbedcrypto PRIVATE "${COMPONENT_SRCS}")
@@ -44,7 +47,7 @@ target_compile_definitions(mbedcrypto PUBLIC
 	-DMBEDTLS_ECDH_COMPUTE_SHARED_ALT
 	-DMBEDTLS_ECDSA_VERIFY_ALT
 	-DMBEDTLS_ECDSA_SIGN_ALT
-	-DMBEDTLS_RSA_ALT
+	# -DMBEDTLS_RSA_ALT
 )
 
 target_include_directories(mbedcrypto PUBLIC
