--- a/examples/provision_test_certificate/CMakeLists.txt
+++ b/examples/provision_test_certificate/CMakeLists.txt
@@ -3,5 +3,8 @@
 cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-set (EXTRA_COMPONENT_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../components/optiga")
+
+idf_build_set_property(COMPILE_OPTIONS "-Wno-format-nonliteral;-Wno-format-security;-Wformat=0" APPEND)
+
+set (EXTRA_COMPONENT_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../components/optiga""${CMAKE_CURRENT_LIST_DIR}/../../components/esp-azure/port")
 project(provision_test_certificate)
