Fix build errors for submodule azure-iot-sdk-c - patch to fix the mismatching function prototype for the c-utility submodule, as this fix is not part of the release version. - Updated component include path since the rsa_internal.h has been renamed to rsa_alt_helpers.h and is present in mbedtls/library

--- a/components/optiga/CMakeLists.txt
+++ b/components/optiga/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(COMPONENT_ADD_INCLUDEDIRS 
 		"${PROJECT_SOURCE_DIR}/components/mbedtls/mbedtls/include"
+		"${PROJECT_SOURCE_DIR}/components/mbedtls/mbedtls/library"
 		"${PROJECT_SOURCE_DIR}/components/driver/i2c/include"
 		"${PROJECT_SOURCE_DIR}/components/driver/gpio/include"
 		"${PROJECT_SOURCE_DIR}/components/esp_netif/include"
