Fixed Build error - Suppress warning message for unused variables - Update CMakeLists.txt for iothub_client_sample_mqtt - Updated sdkconfig for both the projects

--- a/examples/provision_test_certificate/CMakeLists.txt
+++ b/examples/provision_test_certificate/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
-idf_build_set_property(COMPILE_OPTIONS "-Wno-format-nonliteral;-Wno-format-security;-Wformat=0" APPEND)
+idf_build_set_property(COMPILE_OPTIONS "-Wno-format-nonliteral;-Wno-format-security;-Wformat=0;-Wno-unused-variable" APPEND)
 
 set (EXTRA_COMPONENT_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../components/optiga""${CMAKE_CURRENT_LIST_DIR}/../../components/esp-azure/port")
 project(provision_test_certificate)
