--- a/examples/iothub_client_sample_mqtt/CMakeLists.txt
+++ b/examples/iothub_client_sample_mqtt/CMakeLists.txt
@@ -1,7 +1,10 @@
 # The following five lines of boilerplate have to be in your project's
 # CMakeLists in this exact order for cmake to work correctly
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+idf_build_set_property(COMPILE_OPTIONS "-Wno-format-nonliteral;-Wno-format-security;-Wformat=0;-Wno-unused-variable" APPEND)
+
 set (EXTRA_COMPONENT_DIRS "${CMAKE_CURRENT_LIST_DIR}/../../components/optiga" "${CMAKE_CURRENT_LIST_DIR}/../../components/esp-azure/port")
 project(iothub_client_sample_mqtt)
